--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "julius",
+  "description": "An online Elective Management system",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -12,13 +12,18 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "bulma": "^0.8.0",
     "compression": "^1.7.1",
     "polka": "next",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
     "webpack": "^4.7.0"
