--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "firebase": "^7.8.0",
     "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.0.0",
-    "nuxt-fire": "^3.5.4"
+    "nuxt-fire": "^3.5.4",
+    "vue-js-modal": "^1.3.31"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
