--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "bulma-o-steps": "^1.0.9",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "firebase": "^7.8.0",
