--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,7 +27,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - run: npm generate:gh-pages
-    - run: npm deploy
+    - run: npm run generate:gh-pages
+    - run: npm run deploy
       env:
         CI: true
