--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.8.5",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/bulma": "^1.2.1",
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/axios": "^5.9.5",
+    "@nuxtjs/bulma": "^1.2.7",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bulma-o-steps": "^1.0.9",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "firebase": "^7.8.0",
+    "firebase": "^7.10.0",
     "nuxt": "^2.0.0",
-    "nuxt-fire": "^3.5.4",
-    "vue-js-modal": "^1.3.31"
+    "nuxt-fire": "^3.5.7",
+    "vue-js-modal": "^1.3.33"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@vue/test-utils": "^1.0.0-beta.32",
     "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
+    "jest": "^25.1.0",
+    "jshint": "^2.11.0",
     "nodemon": "^1.18.9",
     "push-dir": "^0.4.1",
     "vue-jest": "^4.0.0-0"
