--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,6 +28,6 @@ jobs:
     # - run: npm run build --if-present
     - run: npm test
     - run: npm run generate:gh-pages
-    - run: npm run deploy
+    # - run: npm run deploy
       env:
         CI: true
