--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,6 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run generate:gh-pages
-    - run: npm run deploy
+    - run: npm run ghpages
       env:
         CI: true
