--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest",
     "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
     "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
+    "ghpages": "git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.8.5",
