--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@nuxtjs/auth": "^4.8.5",
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/bulma": "^1.2.7",
+    "@nuxtjs/firebase": "^4.2.2",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bulma-o-steps": "^1.0.9",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "firebase": "^7.10.0",
     "nuxt": "^2.0.0",
-    "nuxt-fire": "^3.5.7",
     "vue-js-modal": "^1.3.33"
   },
   "devDependencies": {
