--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-jest": "^24.1.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "jshint": "^2.11.0",
     "nodemon": "^1.18.9",
