--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
     "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "ghpages": "git subtree push --prefix dist origin gh-pages"
+    "ghpages": "git subtree push --prefix dist origin gh-pages",
+    "eslint:init": "eslint --init"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.8.5",
@@ -32,6 +33,7 @@
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-jest": "^24.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "jest": "^25.1.0",
     "jshint": "^2.11.0",
     "nodemon": "^1.18.9",
