--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       run: |
         npm install
         npm run-script generate:gh-pages
+        npm run deploy
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
