--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,17 @@
-name: Deploy to GitHub Pages
-on:
-  push:
-    branches:
-      - master
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
-    - name: Build
+    - uses: actions/checkout@master
+    - name: Create local changes
       run: |
-        npm install
-        npm run-script generate:gh-pages
-        npm run ghpages
-
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+        npm run generate:gh-pages
+    - name: Commit files
+      run: |
+        git config --local user.email "siddhsham@github.com"
+        git config --local user.name "siddharthsham"
+        git commit -m "Add changes" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
+        github_token: ${{ secrets.GITHUB_TOKEN }}
